{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 87,
  "lineage": "efebc55c-80cb-9cde-13b1-5454d12a4e33",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_and_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0588935a949f9ff17",
            "arn": "arn:aws:ec2:us-east-1:080718382811:instance/i-029de160dcdbae6d8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bluewave-instance-profile-dev",
            "id": "i-029de160dcdbae6d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "r6a.large",
            "ipv6_address_count": 0,
            "key_name": "bluewave-kp-dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c7e33da75b74c5f6",
            "private_dns": "ip-10-0-1-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.71",
            "public_ip": "54.242.47.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e86994f0d068525",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ff1d3348a9c4f80",
            "tags": {
              "Name": "bluewave-app-and-web-server-dev"
            },
            "tags_all": {
              "Name": "bluewave-app-and-web-server-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05705eabb1f1a4cea"
            ]
          },
          "dependencies": [
            "aws_ecr_repository.bluewave_app",
            "aws_iam_instance_profile.ec2_ecr_instance_profile",
            "aws_iam_role.ec2_ecr_role",
            "aws_key_pair.deployer",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet",
            "aws_vpc.main",
            "data.aws_ami.app_and_web_server",
            "data.http.my_ip",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080718382811:internet-gateway/igw-0bf1b8b4ac339450a",
            "id": "igw-0bf1b8b4ac339450a",
            "owner_id": "080718382811",
            "vpc_id": "vpc-0c95acaaafbf576f9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080718382811:route-table/rtb-0e2bb91e02cdf5fc0",
            "id": "rtb-0e2bb91e02cdf5fc0",
            "owner_id": "080718382811",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf1b8b4ac339450a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bluewave-rt-dev"
            },
            "tags_all": {
              "Name": "bluewave-rt-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c95acaaafbf576f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7e6a869b9bfd728",
            "route_table_id": "rtb-0e2bb91e02cdf5fc0",
            "subnet_id": "subnet-01ff1d3348a9c4f80"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main",
            "aws_subnet.subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080718382811:security-group/sg-05705eabb1f1a4cea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05705eabb1f1a4cea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "107.2.100.2/32"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "terraform-20231121175203179800000006",
            "name_prefix": "terraform-",
            "owner_id": "080718382811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bluewave-sg-dev"
            },
            "tags_all": {
              "Name": "bluewave-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c95acaaafbf576f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080718382811:subnet/subnet-01ff1d3348a9c4f80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ff1d3348a9c4f80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "080718382811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bluewave-subnet-dev"
            },
            "tags_all": {
              "Name": "bluewave-subnet-dev"
            },
            "vpc_id": "vpc-0c95acaaafbf576f9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080718382811:vpc/vpc-0c95acaaafbf576f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0281859684d8eedab",
            "default_route_table_id": "rtb-0490bb6a7affce3e5",
            "default_security_group_id": "sg-0202e68c2186ef026",
            "dhcp_options_id": "dopt-04b1de5401dee5645",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c95acaaafbf576f9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0490bb6a7affce3e5",
            "owner_id": "080718382811",
            "tags": {
              "Name": "bluewave-vpc-dev"
            },
            "tags_all": {
              "Name": "bluewave-vpc-dev"
            }
          }
        }
      ]
    }
  ]
}